[tool.poetry]
name = "convey"
version = "0.0.1"
description = "Data Storages"
authors = [
  "edazizovv",
]
license = "MIT"
readme = "README.md"
packages = [{include = "convey"}]

[tool.poetry.dependencies]
python = "^3.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"